# grammr-serverless

./: .gitignore  .release-please-manifest.json  AGENTS.md  README.md  Taskfile.yaml  drizzle.config.ts  eslint.config.mjs  jest.config.js  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  release-please-config.json  should-deploy.sh  tailwind.config.ts  tsconfig.json
docs/: dsl.md  flashcard-structure.drawio  fsrs.drawio
e2e/: auth.setup.ts  test-data.ts
lambda/authorizer/: README.md  authorizer.py  pyproject.toml  pytest.ini  test_authorizer.py
lambda/inflections-latin/: CHANGELOG.md  Dockerfile  README.md  build.sh  languages.txt  logging_config.yaml  pyproject.toml  pytest.ini
lambda/inflections-latin/inflections/: conjugation_mapper.py  feature_retriever.py  inflector.py  lambda_handler.py  lambda_util.py  main.py  model_utils.py  webserver.py
lambda/inflections-latin/inflections/domain/: __init__.py  feature.py  inflection.py  inflection_request.py  language.py  part_of_speech.py
lambda/inflections-latin/test/: test_conjugation_mapper.py  test_extract_language.py  test_inflector.py
lambda/inflections-ru/: CHANGELOG.md  Dockerfile  README.md  build.sh  openapi.yaml  pyproject.toml  pytest.ini  test.json
lambda/inflections-ru/inflections/: feature_retriever.py  inflector.py  lambda_handler.py  lambda_util.py  main.py
lambda/inflections-ru/inflections/domain/: __init__.py  feature.py  inflection.py  inflection_request.py  part_of_speech.py
lambda/inflections-ru/test/: test_feature_retriever.py  test_inflector.py
public/: sw.js  (+1 more)
(+329 files in other folders)
