[project]
name = "inflections-ru"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "pymorphy3>=2.0.6",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.12.0",
    "isort>=7.0.0",
    "pip>=25.3",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]
